--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <body>
 <h1>Waffle Programming</h1>
 <canvas id="waffleEditor" width="400" height="400"></canvas>
-<!-- The code for waffle will go here -->
+  <script>
+  //The code will go here. It will need to be copied or added through a source.
+  </script>
 
 </body>
 </html>
