--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>Waffle Programming</h1>
 <canvas id="waffleEditor" width="400" height="400"></canvas>
   <script>
-console.log(Hello)
+console.log("hi")
   </script>
 
 </body>
