--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 <title>Waffle Programming</title>
+  </head>
 <body>
 <h1>Waffle Programming</h1>
 <canvas id="waffleEditor" width="400" height="400"></canvas>
