--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
 <title>Waffle Programming</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <body>
 <h1>Waffle Programming</h1>
