--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
-<title>Waffle Programming</title>
+    <title>Waffle Programming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+    <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
   </head>
 <body>
-<h1>Waffle Programming</h1>
-<canvas id="waffleEditor" width="400" height="400"></canvas>
-  <script>
-console.log("hi")
-  </script>
+  
+  <div class="row">
+    <div class="column">Waffle Programming</div>
+    <div class="column">New Project</div>
+    <div class="column">Help</div>
+    <div class="column">Contact</div>
+  </div>
 
+  <blockquote>
+  <p><em>Work in progress...</em></p>
+  </blockquote>
+  
 </body>
 </html>
