Change quote type to add JS definition

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <script>
   function createCanvas() {
-  document.getElementById("workspace").innerHTML+="<canvas id="waffleEditor" width="400" height="400"></canvas>";
+  document.getElementById("workspace").innerHTML+='<canvas id="waffleEditor" width="400" height="400"></canvas>';
   }
   </script>
   <div class="row">
