--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
   <script>
   function createCanvas() {
-  document.getElementById("workspace").innerHTML='  <canvas id="waffleEditor" width="400" height="400"></canvas>  <script src="https://rawgit.com/waffleprogramming/waffleprogramming.github.io/master/canvas.js">'+"</script>";
+  document.getElementById("workspace").innerHTML='  <canvas id="waffleEditor" width="400" height="400"></canvas>  ';
+    var script = document.createElement("SCRIPT");
+    script.setAttribute("src","https://rawgit.com/waffleprogramming/waffleprogramming.github.io/master/canvas.js");
+    document.body.appendChild(script);
     var editor = {
     render: function() {
   canvasJS.text.fill("30px Arial","This is the Waffle editor (WIP)",100,100);
