--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     render: function() {
   canvasJS.text.fill("30px Arial","This is the Waffle editor (WIP)",100,100);
   },
-      interval: setInterval(editor.render,10)
+      interval: setInterval(render,10)
     
     };
   }
