--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     render: function() {
   canvasJS.text.fill("30px Arial","This is the Waffle editor (WIP)",100,100);
   },
-      interval: setInterval(render,10)
+      interval: setInterval(function() {canvasJS.text.fill("30px Arial","This is the Waffle editor (WIP)",100,100);},10)
     
     };
   }
