--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     render: function() {
   canvasJS.text.fill("30px Arial","This is the Waffle editor (WIP)",100,100);
   },
-      interval: setInterval(function() {canvasJS.text.fill("30px Arial","This is the Waffle editor (WIP)",100,100);},10)
+      interval: setInterval(function() {canvasJS.text.fill("`23px Arial","This is the Waffle editor (WIP)",100,100);},10)
     
     };
   }
@@ -24,8 +24,7 @@
 
   <div class="row">
     <div class="column">Waffle Programming</div>
-    <div class="column" onclick="createCanvas();">New Project</div>
-    <div class="column" onclick="location.assign('https://waffleprogramming.github.io/waffle-wiki/');">Help</div>
+    <div class="column";">Help</div>
     <div class="column">Contact</div>
   </div>
 
