--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
   <div class="row">
     <div class="column">Waffle Programming</div>
-    <div class="column";">Help</div>
+    <div class="column" onclick="createCanvas();">New Project</div>
+ <div class="column" onclick="location.assign('https://waffleprogramming.github.io/waffle-wiki/');">Help</div>
+    
     <div class="column">Contact</div>
   </div>
 
