--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="row">
     <div class="column">Waffle Programming</div>
     <div class="column" onclick="createCanvas();">New Project</div>
-    <p><a href="https://waffleprogramming.github.io/waffle-wiki">Help<a><p>
+    <p><a href="https://waffleprogramming.github.io/waffle-wiki">Help</a><p>
     
     <div class="column">Contact</div>
   </div>
