fix a tag in spanish section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="row">
     <div class="column">programación de waffles</div>
     <div class="column" onclick="createCanvas();">nuevo proyecto</div>
-    <p><a href="https://waffleprogramming.github.io/waffle-wiki">ayuda<a><p>
+    <p><a href="https://waffleprogramming.github.io/waffle-wiki">ayuda</a><p>
     
     <div class="column">contacto</div>
   </div>
